// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorGroupOverview -> List should render empty state 1`] = `
<Memo(UnoptimizedManagedTable)
  columns={
    Array [
      Object {
        "field": "groupId",
        "name": <React.Fragment>
          Group ID
           
          <EuiIconTip
            color="subdued"
            content="Hash of the stack trace. Groups similar errors together, even when the error message is different due to dynamic parameters."
            iconProps={
              Object {
                "className": "eui-alignTop",
              }
            }
            size="s"
            type="questionInCircle"
          />
        </React.Fragment>,
        "render": [Function],
        "sortable": false,
        "width": "96px",
      },
      Object {
        "field": "type",
        "name": "Type",
        "render": [Function],
        "sortable": false,
      },
      Object {
        "field": "message",
        "name": "Error message and culprit",
        "render": [Function],
        "sortable": false,
        "width": "50%",
      },
      Object {
        "align": "right",
        "field": "handled",
        "name": "",
        "render": [Function],
        "sortable": false,
      },
      Object {
        "dataType": "number",
        "field": "occurrenceCount",
        "name": "Occurrences",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "align": "right",
        "field": "latestOccurrenceAt",
        "name": "Latest occurrence",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialPageSize={25}
  initialSortDirection="desc"
  initialSortField="occurrenceCount"
  items={Array []}
  noItemsMessage="No errors were found"
  sortItems={false}
>
  <div
    className="euiBasicTable"
  >
    <div>
      <div
        className="euiTableHeaderMobile"
      >
        <EuiFlexGroup
          alignItems="baseline"
          justifyContent="spaceBetween"
          responsive={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                className="euiTableSortMobile"
              >
                <div
                  className="euiPopover euiPopover--anchorDownRight"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="euiPopover__anchor"
                  >
                    <button
                      className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiButtonEmpty--flushRight"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="euiButtonEmpty__content"
                      >
                        <div
                          aria-hidden="true"
                          className="euiButtonEmpty__icon"
                          data-euiicon-type="arrowDown"
                          size="m"
                        />
                        <span
                          className="euiButtonEmpty__text"
                        >
                          Sorting
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </EuiFlexGroup>
      </div>
      <table
        className="euiTable euiTable--responsive"
      >
        <caption
          className="euiScreenReaderOnly euiTableCaption"
        />
        <thead>
          <tr>
            <th
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_groupId_0"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": "96px",
                }
              }
            >
              <div
                className="euiTableCellContent"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Group ID "
                >
                  Group ID
                   
                  <span
                    className="euiToolTipAnchor"
                    onKeyUp={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <div
                      aria-label="Info"
                      className="eui-alignTop"
                      color="subdued"
                      data-euiicon-type="questionInCircle"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      size="s"
                      tabIndex={0}
                    />
                  </span>
                </span>
              </div>
            </th>
            <th
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_type_1"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Type"
                >
                  Type
                </span>
              </div>
            </th>
            <th
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_message_2"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <div
                className="euiTableCellContent"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Error message and culprit"
                >
                  Error message and culprit
                </span>
              </div>
            </th>
            <td
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_handled_3"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignRight"
              >
                <span
                  className="euiTableCellContent__text"
                />
              </div>
            </td>
            <th
              aria-live="polite"
              aria-sort="descending"
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_occurrenceCount_4"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <button
                className="euiTableHeaderButton euiTableHeaderButton-isSorted"
                data-test-subj="tableHeaderSortButton"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiTableCellContent euiTableCellContent--alignRight"
                >
                  <span
                    className="euiTableCellContent__text"
                    title="Occurrences; Sorted in descending order"
                  >
                    Occurrences
                  </span>
                  <div
                    aria-label="Sorted in descending order"
                    className="euiTableSortIcon"
                    data-euiicon-type="sortDown"
                    size="m"
                  />
                  <span
                    className="euiScreenReaderOnly"
                  >
                    Click to sort in ascending order
                  </span>
                </span>
              </button>
            </th>
            <th
              aria-live="polite"
              aria-sort="none"
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_latestOccurrenceAt_5"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <button
                className="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiTableCellContent euiTableCellContent--alignRight"
                >
                  <span
                    className="euiTableCellContent__text"
                    title="Latest occurrence"
                  >
                    Latest occurrence
                  </span>
                  <span
                    className="euiScreenReaderOnly"
                  >
                    Click to sort in ascending order
                  </span>
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="euiTableRow"
          >
            <td
              className="euiTableRowCell euiTableRowCell--isMobileFullWidth"
              colSpan={6}
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignCenter"
              >
                <span
                  className="euiTableCellContent__text"
                >
                  No errors were found
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</Memo(UnoptimizedManagedTable)>
`;

exports[`ErrorGroupOverview -> List should render with data 1`] = `
.c0 {
  font-family: "Roboto Mono",Consolas,Menlo,Courier,monospace;
}

.c2 {
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c1 {
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c3 {
  font-family: "Roboto Mono",Consolas,Menlo,Courier,monospace;
  font-size: 16px;
  max-width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c4 {
  font-family: "Roboto Mono",Consolas,Menlo,Courier,monospace;
}

<Memo(UnoptimizedManagedTable)
  columns={
    Array [
      Object {
        "field": "groupId",
        "name": <React.Fragment>
          Group ID
           
          <EuiIconTip
            color="subdued"
            content="Hash of the stack trace. Groups similar errors together, even when the error message is different due to dynamic parameters."
            iconProps={
              Object {
                "className": "eui-alignTop",
              }
            }
            size="s"
            type="questionInCircle"
          />
        </React.Fragment>,
        "render": [Function],
        "sortable": false,
        "width": "96px",
      },
      Object {
        "field": "type",
        "name": "Type",
        "render": [Function],
        "sortable": false,
      },
      Object {
        "field": "message",
        "name": "Error message and culprit",
        "render": [Function],
        "sortable": false,
        "width": "50%",
      },
      Object {
        "align": "right",
        "field": "handled",
        "name": "",
        "render": [Function],
        "sortable": false,
      },
      Object {
        "dataType": "number",
        "field": "occurrenceCount",
        "name": "Occurrences",
        "render": [Function],
        "sortable": true,
      },
      Object {
        "align": "right",
        "field": "latestOccurrenceAt",
        "name": "Latest occurrence",
        "render": [Function],
        "sortable": true,
      },
    ]
  }
  initialPageSize={25}
  initialSortDirection="desc"
  initialSortField="occurrenceCount"
  items={
    Array [
      Object {
        "culprit": "elasticapm.contrib.django.client.capture",
        "groupId": "a0ce2c8978ef92cdf2ff163ae28576ee",
        "latestOccurrenceAt": "2018-01-10T10:06:37.561Z",
        "message": "About to blow up!",
        "occurrenceCount": 75,
      },
      Object {
        "culprit": "opbeans.views.oopsie",
        "groupId": "f3ac95493913cc7a3cfec30a19d2120a",
        "latestOccurrenceAt": "2018-01-10T10:06:37.630Z",
        "message": "AssertionError: ",
        "occurrenceCount": 75,
      },
      Object {
        "culprit": "opbeans.tasks.update_stats",
        "groupId": "e90863d04b7a692435305f09bbe8c840",
        "latestOccurrenceAt": "2018-01-10T10:06:36.859Z",
        "message": "AssertionError: Bad luck!",
        "occurrenceCount": 24,
      },
      Object {
        "culprit": "opbeans.views.customer",
        "groupId": "8673d8bf7a032e387c101bafbab0d2bc",
        "latestOccurrenceAt": "2018-01-10T10:06:13.211Z",
        "message": "Customer with ID 8517 not found",
        "occurrenceCount": 15,
      },
    ]
  }
  noItemsMessage="No errors were found"
  sortItems={false}
>
  <div
    className="euiBasicTable"
  >
    <div>
      <div
        className="euiTableHeaderMobile"
      >
        <EuiFlexGroup
          alignItems="baseline"
          justifyContent="spaceBetween"
          responsive={false}
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            />
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                className="euiTableSortMobile"
              >
                <div
                  className="euiPopover euiPopover--anchorDownRight"
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                >
                  <div
                    className="euiPopover__anchor"
                  >
                    <button
                      className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--xSmall euiButtonEmpty--iconRight euiButtonEmpty--flushRight"
                      onClick={[Function]}
                      type="button"
                    >
                      <span
                        className="euiButtonEmpty__content"
                      >
                        <div
                          aria-hidden="true"
                          className="euiButtonEmpty__icon"
                          data-euiicon-type="arrowDown"
                          size="m"
                        />
                        <span
                          className="euiButtonEmpty__text"
                        >
                          Sorting
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </EuiFlexGroup>
      </div>
      <table
        className="euiTable euiTable--responsive"
      >
        <caption
          className="euiScreenReaderOnly euiTableCaption"
        />
        <thead>
          <tr>
            <th
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_groupId_0"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": "96px",
                }
              }
            >
              <div
                className="euiTableCellContent"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Group ID "
                >
                  Group ID
                   
                  <span
                    className="euiToolTipAnchor"
                    onKeyUp={[Function]}
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <div
                      aria-label="Info"
                      className="eui-alignTop"
                      color="subdued"
                      data-euiicon-type="questionInCircle"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      size="s"
                      tabIndex={0}
                    />
                  </span>
                </span>
              </div>
            </th>
            <th
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_type_1"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Type"
                >
                  Type
                </span>
              </div>
            </th>
            <th
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_message_2"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <div
                className="euiTableCellContent"
              >
                <span
                  className="euiTableCellContent__text"
                  title="Error message and culprit"
                >
                  Error message and culprit
                </span>
              </div>
            </th>
            <td
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_handled_3"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignRight"
              >
                <span
                  className="euiTableCellContent__text"
                />
              </div>
            </td>
            <th
              aria-live="polite"
              aria-sort="descending"
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_occurrenceCount_4"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <button
                className="euiTableHeaderButton euiTableHeaderButton-isSorted"
                data-test-subj="tableHeaderSortButton"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiTableCellContent euiTableCellContent--alignRight"
                >
                  <span
                    className="euiTableCellContent__text"
                    title="Occurrences; Sorted in descending order"
                  >
                    Occurrences
                  </span>
                  <div
                    aria-label="Sorted in descending order"
                    className="euiTableSortIcon"
                    data-euiicon-type="sortDown"
                    size="m"
                  />
                  <span
                    className="euiScreenReaderOnly"
                  >
                    Click to sort in ascending order
                  </span>
                </span>
              </button>
            </th>
            <th
              aria-live="polite"
              aria-sort="none"
              className="euiTableHeaderCell"
              data-test-subj="tableHeaderCell_latestOccurrenceAt_5"
              role="columnheader"
              scope="col"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <button
                className="euiTableHeaderButton"
                data-test-subj="tableHeaderSortButton"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiTableCellContent euiTableCellContent--alignRight"
                >
                  <span
                    className="euiTableCellContent__text"
                    title="Latest occurrence"
                  >
                    Latest occurrence
                  </span>
                  <span
                    className="euiScreenReaderOnly"
                  >
                    Click to sort in ascending order
                  </span>
                </span>
              </button>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className="euiTableRow"
          >
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "96px",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Group ID
                 
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    aria-label="Info"
                    className="eui-alignTop"
                    color="subdued"
                    data-euiicon-type="questionInCircle"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    size="s"
                    tabIndex={0}
                  />
                </span>
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorDetailLink)
                  className=""
                  errorGroupId="a0ce2c8978ef92cdf2ff163ae28576ee"
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c0"
                    href="#/services/opbeans-python/errors/a0ce2c8978ef92cdf2ff163ae28576ee?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                  >
                    <a
                      className="euiLink euiLink--primary c0"
                      href="#/services/opbeans-python/errors/a0ce2c8978ef92cdf2ff163ae28576ee?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                      rel="noreferrer"
                    >
                      a0ce2
                    </a>
                  </EuiLink>
                </Styled(ErrorDetailLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Type
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorOverviewLink)
                  className=""
                  query={
                    Object {
                      "end": "2018-01-10T10:06:41.050Z",
                      "kuery": "error.exception.type:undefined",
                      "page": 0,
                      "serviceName": "opbeans-python",
                      "start": "2018-01-10T09:51:41.050Z",
                      "transactionType": "request",
                    }
                  }
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c1"
                    href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                  >
                    <a
                      className="euiLink euiLink--primary c1"
                      href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                      rel="noreferrer"
                    />
                  </EuiLink>
                </Styled(ErrorOverviewLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Error message and culprit
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <styled.div
                  className=""
                >
                  <div
                    className="c2"
                  >
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <Styled(ErrorDetailLink)
                        errorGroupId="a0ce2c8978ef92cdf2ff163ae28576ee"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        serviceName="opbeans-python"
                      >
                        <EuiLink
                          className="c3"
                          href="#/services/opbeans-python/errors/a0ce2c8978ef92cdf2ff163ae28576ee?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <a
                            className="euiLink euiLink--primary c3"
                            href="#/services/opbeans-python/errors/a0ce2c8978ef92cdf2ff163ae28576ee?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            rel="noreferrer"
                          >
                            About to blow up!
                          </a>
                        </EuiLink>
                      </Styled(ErrorDetailLink)>
                    </span>
                    <br />
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <styled.div
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          className="c4"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          elasticapm.contrib.django.client.capture
                        </div>
                      </styled.div>
                    </span>
                  </div>
                </styled.div>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              />
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Occurrences
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                75
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Latest occurrence
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  1337 minutes ago (mocking 1515578797)
                </span>
              </div>
            </td>
          </tr>
          <tr
            className="euiTableRow"
          >
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "96px",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Group ID
                 
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    aria-label="Info"
                    className="eui-alignTop"
                    color="subdued"
                    data-euiicon-type="questionInCircle"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    size="s"
                    tabIndex={0}
                  />
                </span>
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorDetailLink)
                  className=""
                  errorGroupId="f3ac95493913cc7a3cfec30a19d2120a"
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c0"
                    href="#/services/opbeans-python/errors/f3ac95493913cc7a3cfec30a19d2120a?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                  >
                    <a
                      className="euiLink euiLink--primary c0"
                      href="#/services/opbeans-python/errors/f3ac95493913cc7a3cfec30a19d2120a?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                      rel="noreferrer"
                    >
                      f3ac9
                    </a>
                  </EuiLink>
                </Styled(ErrorDetailLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Type
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorOverviewLink)
                  className=""
                  query={
                    Object {
                      "end": "2018-01-10T10:06:41.050Z",
                      "kuery": "error.exception.type:undefined",
                      "page": 0,
                      "serviceName": "opbeans-python",
                      "start": "2018-01-10T09:51:41.050Z",
                      "transactionType": "request",
                    }
                  }
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c1"
                    href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                  >
                    <a
                      className="euiLink euiLink--primary c1"
                      href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                      rel="noreferrer"
                    />
                  </EuiLink>
                </Styled(ErrorOverviewLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Error message and culprit
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <styled.div
                  className=""
                >
                  <div
                    className="c2"
                  >
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <Styled(ErrorDetailLink)
                        errorGroupId="f3ac95493913cc7a3cfec30a19d2120a"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        serviceName="opbeans-python"
                      >
                        <EuiLink
                          className="c3"
                          href="#/services/opbeans-python/errors/f3ac95493913cc7a3cfec30a19d2120a?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <a
                            className="euiLink euiLink--primary c3"
                            href="#/services/opbeans-python/errors/f3ac95493913cc7a3cfec30a19d2120a?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            rel="noreferrer"
                          >
                            AssertionError: 
                          </a>
                        </EuiLink>
                      </Styled(ErrorDetailLink)>
                    </span>
                    <br />
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <styled.div
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          className="c4"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          opbeans.views.oopsie
                        </div>
                      </styled.div>
                    </span>
                  </div>
                </styled.div>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              />
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Occurrences
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                75
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Latest occurrence
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  1337 minutes ago (mocking 1515578797)
                </span>
              </div>
            </td>
          </tr>
          <tr
            className="euiTableRow"
          >
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "96px",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Group ID
                 
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    aria-label="Info"
                    className="eui-alignTop"
                    color="subdued"
                    data-euiicon-type="questionInCircle"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    size="s"
                    tabIndex={0}
                  />
                </span>
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorDetailLink)
                  className=""
                  errorGroupId="e90863d04b7a692435305f09bbe8c840"
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c0"
                    href="#/services/opbeans-python/errors/e90863d04b7a692435305f09bbe8c840?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                  >
                    <a
                      className="euiLink euiLink--primary c0"
                      href="#/services/opbeans-python/errors/e90863d04b7a692435305f09bbe8c840?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                      rel="noreferrer"
                    >
                      e9086
                    </a>
                  </EuiLink>
                </Styled(ErrorDetailLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Type
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorOverviewLink)
                  className=""
                  query={
                    Object {
                      "end": "2018-01-10T10:06:41.050Z",
                      "kuery": "error.exception.type:undefined",
                      "page": 0,
                      "serviceName": "opbeans-python",
                      "start": "2018-01-10T09:51:41.050Z",
                      "transactionType": "request",
                    }
                  }
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c1"
                    href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                  >
                    <a
                      className="euiLink euiLink--primary c1"
                      href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                      rel="noreferrer"
                    />
                  </EuiLink>
                </Styled(ErrorOverviewLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Error message and culprit
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <styled.div
                  className=""
                >
                  <div
                    className="c2"
                  >
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <Styled(ErrorDetailLink)
                        errorGroupId="e90863d04b7a692435305f09bbe8c840"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        serviceName="opbeans-python"
                      >
                        <EuiLink
                          className="c3"
                          href="#/services/opbeans-python/errors/e90863d04b7a692435305f09bbe8c840?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <a
                            className="euiLink euiLink--primary c3"
                            href="#/services/opbeans-python/errors/e90863d04b7a692435305f09bbe8c840?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            rel="noreferrer"
                          >
                            AssertionError: Bad luck!
                          </a>
                        </EuiLink>
                      </Styled(ErrorDetailLink)>
                    </span>
                    <br />
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <styled.div
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          className="c4"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          opbeans.tasks.update_stats
                        </div>
                      </styled.div>
                    </span>
                  </div>
                </styled.div>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              />
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Occurrences
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                24
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Latest occurrence
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  1337 minutes ago (mocking 1515578796)
                </span>
              </div>
            </td>
          </tr>
          <tr
            className="euiTableRow"
          >
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "96px",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Group ID
                 
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <div
                    aria-label="Info"
                    className="eui-alignTop"
                    color="subdued"
                    data-euiicon-type="questionInCircle"
                    onBlur={[Function]}
                    onFocus={[Function]}
                    size="s"
                    tabIndex={0}
                  />
                </span>
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorDetailLink)
                  className=""
                  errorGroupId="8673d8bf7a032e387c101bafbab0d2bc"
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c0"
                    href="#/services/opbeans-python/errors/8673d8bf7a032e387c101bafbab0d2bc?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                  >
                    <a
                      className="euiLink euiLink--primary c0"
                      href="#/services/opbeans-python/errors/8673d8bf7a032e387c101bafbab0d2bc?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                      rel="noreferrer"
                    >
                      8673d
                    </a>
                  </EuiLink>
                </Styled(ErrorDetailLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Type
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <Styled(ErrorOverviewLink)
                  className=""
                  query={
                    Object {
                      "end": "2018-01-10T10:06:41.050Z",
                      "kuery": "error.exception.type:undefined",
                      "page": 0,
                      "serviceName": "opbeans-python",
                      "start": "2018-01-10T09:51:41.050Z",
                      "transactionType": "request",
                    }
                  }
                  serviceName="opbeans-python"
                >
                  <EuiLink
                    className="c1"
                    href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                  >
                    <a
                      className="euiLink euiLink--primary c1"
                      href="#/services/opbeans-python/errors?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0&page=0&serviceName=opbeans-python&transactionType=request&start=2018-01-10T09:51:41.050Z&end=2018-01-10T10:06:41.050Z&kuery=error.exception.type:undefined"
                      rel="noreferrer"
                    />
                  </EuiLink>
                </Styled(ErrorOverviewLink)>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": "50%",
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Error message and culprit
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--overflowingContent"
              >
                <styled.div
                  className=""
                >
                  <div
                    className="c2"
                  >
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <Styled(ErrorDetailLink)
                        errorGroupId="8673d8bf7a032e387c101bafbab0d2bc"
                        onBlur={[Function]}
                        onFocus={[Function]}
                        serviceName="opbeans-python"
                      >
                        <EuiLink
                          className="c3"
                          href="#/services/opbeans-python/errors/8673d8bf7a032e387c101bafbab0d2bc?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          <a
                            className="euiLink euiLink--primary c3"
                            href="#/services/opbeans-python/errors/8673d8bf7a032e387c101bafbab0d2bc?rangeFrom=now-24h&rangeTo=now&refreshPaused=true&refreshInterval=0"
                            onBlur={[Function]}
                            onFocus={[Function]}
                            rel="noreferrer"
                          >
                            Customer with ID 8517 not found
                          </a>
                        </EuiLink>
                      </Styled(ErrorDetailLink)>
                    </span>
                    <br />
                    <span
                      className="euiToolTipAnchor"
                      onKeyUp={[Function]}
                      onMouseOut={[Function]}
                      onMouseOver={[Function]}
                    >
                      <styled.div
                        onBlur={[Function]}
                        onFocus={[Function]}
                      >
                        <div
                          className="c4"
                          onBlur={[Function]}
                          onFocus={[Function]}
                        >
                          opbeans.views.customer
                        </div>
                      </styled.div>
                    </span>
                  </div>
                </styled.div>
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              />
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Occurrences
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                15
              </div>
            </td>
            <td
              className="euiTableRowCell"
              style={
                Object {
                  "width": undefined,
                }
              }
            >
              <div
                className="euiTableRowCell__mobileHeader euiTableRowCell--hideForDesktop"
              >
                Latest occurrence
              </div>
              <div
                className="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--overflowingContent"
              >
                <span
                  className="euiToolTipAnchor"
                  onKeyUp={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  1337 minutes ago (mocking 1515578773)
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div>
      <div
        className="euiSpacer euiSpacer--m"
      />
      <EuiFlexGroup
        alignItems="center"
        justifyContent="spaceBetween"
        responsive={false}
      >
        <div
          className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsCenter euiFlexGroup--justifyContentSpaceBetween euiFlexGroup--directionRow"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          />
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
          >
            <div
              className="euiPagination"
              role="group"
            >
              <button
                aria-label="Previous page"
                className="euiButtonIcon euiButtonIcon--text"
                data-test-subj="pagination-button-previous"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <div
                  aria-hidden="true"
                  className="euiButtonIcon__icon"
                  data-euiicon-type="arrowLeft"
                  size="m"
                />
              </button>
              <button
                aria-label="Page 1 of 1"
                className="euiButtonEmpty euiButtonEmpty--text euiButtonEmpty--xSmall euiPaginationButton euiPaginationButton-isActive euiPaginationButton--hideOnMobile"
                data-test-subj="pagination-button-0"
                onClick={[Function]}
                type="button"
              >
                <span
                  className="euiButtonEmpty__content"
                >
                  <span
                    className="euiButtonEmpty__text"
                  >
                    1
                  </span>
                </span>
              </button>
              <button
                aria-label="Next page"
                className="euiButtonIcon euiButtonIcon--text"
                data-test-subj="pagination-button-next"
                disabled={true}
                onClick={[Function]}
                type="button"
              >
                <div
                  aria-hidden="true"
                  className="euiButtonIcon__icon"
                  data-euiicon-type="arrowRight"
                  size="m"
                />
              </button>
            </div>
          </div>
        </div>
      </EuiFlexGroup>
    </div>
  </div>
</Memo(UnoptimizedManagedTable)>
`;
